kubernetes/hw-with-ingress-host.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: training
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  namespace: training
spec:
  selector:
    matchLabels:
      app: helloworld
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld
        env: production
        author: karthequian
        tiers: front
        version: "1.0"
    spec:
      containers:
      - name: helloworld
        image: karthequian/helloworld:blue
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  namespace: training
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: helloworld
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld2
  namespace: training
spec:
  selector:
    matchLabels:
      app: helloworld2
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld2
        env: production
        author: karthequian
        tiers: front
        version: "1.0"
    spec:
      containers:
      - name: helloworld
        image: karthequian/helloworld:black
        ports:
        - containerPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: host-based-ingress
  namespace: training
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: helloworld.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: helloworld-service
          servicePort: 80
